fix code mobile

--- a/ball.html
+++ b/ball.html
@@ -8,11 +8,11 @@
 <body style="position: relative;">
     <form action="">
         <div>
-            <img id="myImage" style="width: 300px;max-width: 100%;" src="./ball.jpg" alt="">
+            <img id="myImage" style="width: 300px;max-width: 100%;z-index: -1;" src="./ball.jpg" alt="">
         </div>
        
         <p>Click Buttons below to move the ball</p>
-        <div>
+        <div >
             <span>
             <input type="button" value="Move Right" onclick="moveRight()">
             <input type="button" value="Move Left" onclick="moveLeft()">
